@@ -9,8 +9,10 @@ guadalinex-eadmin (v5-0.1) hardy; urgency=low
   * Moved to new libnss3-1d as dependence
   * Marked firefox-3.0 as mandatory browser as dependence
   * Updated new jss33.jar library
+  * Certmanager adapted to pk12util new usage
+  * Bugfix importing certificates from volume devices
 
- -- J. Félix Ontañón <fontanon@emergya.es>  Fri, 9 Apr 2008 14:41:11 +0100
+ -- J. Félix Ontañón <fontanon@emergya.es>  Fri, 13 May 2008 16:50:11 +0100
 
 guadalinex-eadmin (r1760-0.1) edgy; urgency=low
 
